# fastapiProject

./: pyproject.toml
fastapiproject/: main.py
tests/: test_main.py
