[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["Luciano Filho <lvgalvaofilho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
httpx = "^0.23.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
blue = "^0.9.1"
pytest-cov = "^4.0.0"
isort = "^5.12.0"


[tool.poetry.group.prod.dependencies]
fastapi = "^0.92.0"
uvicorn = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
